Fix some issues on small devices (width between 320 to 500)

--- a/assets/scss/blog-big-card.scss
+++ b/assets/scss/blog-big-card.scss
@@ -39,7 +39,7 @@
     }
 }
 
-@media only screen and (max-width: 576px) {
+@media (max-width: 576px) {
     .card__image {
         width: 100% !important;
         max-height: 200px;
