--- a/assets/scss/blog-small-card.scss
+++ b/assets/scss/blog-small-card.scss
@@ -1,5 +1,6 @@
 .card {
     width: 354px;
+    width:100%;
     border-bottom: 1px solid #ccc;
 
     &__header__text {
