--- a/assets/scss/blogs-page.scss
+++ b/assets/scss/blogs-page.scss
@@ -1,14 +1,4 @@
 body {
-    font-size: 12px;
-    font-family: "Droid Arabic Naskh", serif;
-    text-align: right;
-    padding: 20px 40px;
-    background-color: #fbfbfb;
-
-    &[dir=ltr] {
-        text-align: left;
-    }
-
     .language {
         flex: 1;
         display: flex;
@@ -25,10 +15,16 @@ body {
         .blogs-list {
             flex: 1;
             min-width: 450px;
-            /* min device width - iPhone 5*/
             max-width: 750px;
             margin: 0 40px;
+
+            @media (max-width: 500px) {
+                min-width: 300px;
+                /* because min device width is 320px*/
+                margin: 0 40px;
+            }
         }
+
         .more-blogs {
             color: #0693ff;
             font-size: large;
@@ -36,6 +32,7 @@ body {
             text-align: center;
             cursor: pointer;
         }
+
         .inspiring-blogs {
             margin-top: 60px;
         }
@@ -43,23 +40,6 @@ body {
         .small-blogs-list {
             border-top: 1px solid #ccc;
             border-bottom: 1px solid #ccc;
-        }
-    }
-
-
-    @media only screen and (max-width: 500px) {
-        padding: 0;
-
-        h1,
-        h2 {
-            text-align: center;
-        }
-
-        .blogs-list {
-            min-width: 300px;
-            /* because min device width - iPhone 5*/
-            margin: 0 40px;
-
         }
     }
 }
